# seasoning

./: .gitignore  .yamllint.yaml  AGENTS.md  Cargo.toml  README.md  hk.pkl  mise.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: ci.yml
.mise/tasks/: clean  format
.mise/tasks/test/: _default  rust
src/: api.rs  batching.rs  config.rs  embedding.rs  error.rs  lib.rs  reqwestx.rs  reranker.rs  service.rs
