[package]
name = "seasoning"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
eyre = "0.6"
futures = "0.3"
http = "1"
pin-project-lite = "0.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tracing = "0.1"
