[package]
name = "seasoning"
version = "0.1.1"
edition = "2024"
description = "Embedding and reranking infrastructure with rate limiting and retry logic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casualjim/seasoning"
documentation = "https://docs.rs/seasoning"
readme = "README.md"
keywords = ["embedding", "reranking", "ai", "llm", "search"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
http = "1"
pin-project-lite = "0.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
